@@ -32,7 +32,7 @@
  *   Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  */
 
-namespace Brainworxx\Krexx\Service\Misc;
+namespace Brainworxx\Krexx\Service\Output;
 
 use Brainworxx\Krexx\Service\Factory\Pool;
 
